3 files modified, 8 added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,23 @@
-<hello name="{{ name }}"></hello>
-<p>
-  Start editing to see some magic happen :)
-</p>
+
+  <div> 
+    <h1>PROJEK ANGULAR 2</h1>
+  </div>
+
+  <div>
+    <button (click)="InputNote()">INPUT NOTE</button>
+    <br><br>
+  </div>
+  <div>
+    <button (click)="DetailNote()">DETAIL NOTE</button>
+    <br><br>
+  </div>
+  <div>
+    <button (click)="FavNote()">FAVORITE NOTE</button>
+    <br><br>
+  </div>
+
+  <div>
+    <router-outlet></router-outlet>
+  </div>
+ 
+  
