--- a/src/halaman1/halaman1.component.html
+++ b/src/halaman1/halaman1.component.html
@@ -10,13 +10,6 @@
   <button (click)="save()">SAVE</button>
 </div>
 
+<div *ngFor="let item of cob1 ">
+    {{item}}
 <div>
-  <p>
-    {{cob1}}
-    <br>
-    {{cob2}}
-    <br>
-    {{cob3}}
-    <br>
-  </p>
-</div>
