4 files modified, 2 added

--- a/src/halaman1/halaman1.component.html
+++ b/src/halaman1/halaman1.component.html
@@ -7,9 +7,6 @@
       Tanggal dibuat :
       <input type="date" [(ngModel)]="tglnote"/><br><br>
   </p>
-  <button (click)="save()">SAVE</button>
+  <button (click)="save(judulnote,isinote,tglnote)">SAVE</button>
 </div>
 
-<div *ngFor="let item of cob1 ">
-    {{item}}
-<div>
