--- a/src/halaman2/halaman2.component.html
+++ b/src/halaman2/halaman2.component.html
@@ -1,6 +1,6 @@
-<h1>LIST OF ALL NOTES</h1>
-<div *ngFor="let note of datanotes; let i=index;">
-	{{i+1}}. {{note}}
+<h3>LIST OF ALL NOTES</h3>
+
+<div *ngFor ="let judul of judulnote">
+	{{judul}}
 	<br>
-  <br>
 </div>
