--- a/src/halaman3/halaman3.component.html
+++ b/src/halaman3/halaman3.component.html
@@ -1,11 +1,11 @@
-<h3>Favorited Notes</h3>
+<h3>The Favorited Notes</h3>
 <div *ngFor="let data of judulnote; let i = index;">
   <div *ngIf="favnote[i] == true; then favorited else unfavorited"></div>
   <ng-template #favorited>
     {{i + 1}}. {{data}}
     <button (click)="viewdetail(i)">VIEW DETAIL</button> 
-    <br>
   </ng-template>
   <ng-template #unfavorited></ng-template>
+  <br>
 </div>
 <router-outlet></router-outlet>
